# resume-template

./: .gitignore  README.md  _config template.yml  _config.yml  example_resume_config.json  pyproject.toml
_data/: education.yml  experience.yml  projects.yml  recognition.yml  recognitions.yml  skills.yml
_layouts/: resume.html
generator/: config.py  index.html  main.py  template.py  utils.py  zaml.py
generator/css/: generator.css  resume.css
generator/html/: education.js  experience.js  header.js  projects.js  recognitions.js  skills.js
generator/js/: generator.js  port.js
