[tool.poetry]
name = "resume-template"
version = "0.1.0"
description = ""
authors = ["zweix123 <1979803044@qq.com>"]
readme = "README.md"
packages = [{include = "resume_template"}]

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
